--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/react": "^4.11.1",
+    "@emotion/react": "^11.11.3",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3"
